[package]
name = "lighting-midi-controller"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Graham <me@mattgraham.me>"]
description = "A bridge application that enables control of ShowXpress lighting software using MIDI devices"
license = "MIT"
repository = "https://github.com/newdaynaz/MIDI-ShowXpress-Controller"
keywords = ["midi", "lighting", "showxpress", "controller", "dmx"]
categories = ["multimedia", "hardware-support"]
readme = "README.md"

[dependencies]
imgui = "0.11"
imgui-wgpu = "0.24"
imgui-winit-support = "0.11"
winit = "0.27"
wgpu = "0.17"
tokio = { version = "1", features = ["full"] }
midir = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
pollster = "0.3"
roxmltree = "0.19"
chrono = "0.4"
directories = "5"
single-instance = "0.3"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[[bin]]
name = "midi_showxpress_controller"
path = "src/main.rs"